--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 
-	<head>
+    <head profile="http://www.w3.org/2005/10/profile">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="UTF-8">
 
-		<title>ETIME_MGR_MMDD</title>
+		<title>My Timesheets Approval</title>
 
 		<script id="sap-ui-bootstrap"
 			src="resources/sap-ui-core.js"
@@ -17,6 +17,10 @@
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
+        <link rel="icon" 
+              type="image/png" 
+              href="approvals.png">
+      
 		<script>
 			sap.ui.getCore().attachInit(function() {
 				new sap.m.Shell({
