Adjust favicon URL to MIME object location

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <link rel="icon" 
               type="image/png" 
-              href="approvals.png">
+              href="/sap/bc/bsp/sap/zhtr_etime_mgr/timesheet_approvals.png">
       
 		<script>
 			sap.ui.getCore().attachInit(function() {
