Correct favicon location after importing MIMEs into BSP app.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <link rel="icon" 
               type="image/png" 
-              href="/sap/bc/bsp/sap/zhtr_etime_mgr/timesheet_approvals.png">
+              href="images/approvals.png">
       
 		<script>
 			sap.ui.getCore().attachInit(function() {
